# _cpp-sandbox

./: .gitignore  README.md  array in function.cpp  classes.cpp  count project lines.cpp  csv parser.cpp  env_manipulation.cpp  format and cmath.cpp  functions.cpp  gcc_help.txt  hw.cpp  lcase.cpp  leetcode test.cpp  list slicing vs python.cpp  makefile.txt  remore char in string.cpp  sqlite connection.cpp  unhadled exception.cpp
cmake_step0/: CMakeLists.txt
vs code libs and headers/0. link the source/: draw_line.cxx  draw_line.hxx  main.cxx
vs code libs and headers/0. link the source/inc/: main.hxx
vs code libs and headers/0. link the source/src/: draw_line.cxx
vs code libs and headers/1. draw line lib/: CMakeLists.txt  draw_line.cxx  draw_line.hxx  main.cpp
vs code libs and headers/2. link the lib/: CMakeLists.txt
